syntax = "proto3";

package million.etcd.ss;

import "module/module_id.proto";

enum ServiceNameId {
    option (module.module_id) = MODULE_ID_ETCD;

    SERVICE_NAME_ID_INVALID = 0;
    SERVICE_NAME_ID_ETCD = 1;
    SERVICE_NAME_ID_CONFIG_DISCOVERY = 2;
}
